--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="main_t_status">Status:</string>
     <string name="main_button_start">Start</string>
     <string name="main_button_stop">Stop</string>
+    <string name="main_t_target" >Target:</string>
+    <string name="main_ti_target">46</string>
 </resources>
