--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="nico_notification_title_template">Time for a fix!</string>
     <string name="accept">Accept</string>
     <string name="action_reject">Reject</string>
+    <string name="main_t_startDate">Start date:</string>
 </resources>
