--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="main_button_start">Start</string>
     <string name="main_button_stop">Stop</string>
     <string name="main_t_target">Target:</string>
+    <string name="main_t_currentTarget">Current target:</string>
     <string name="main_ti_target">46</string>
     <string name="main_t_unit">Unit:</string>
     <string name="main_ti_unit">2</string>
